# px4_ros2_mission

./: .gitignore  README.md  install.md  vcs.repos
px4_config/: gazebo_sitl_multiple_run_coordinates.sh  readme.txt  vut_1000k.world
px4_config/VUT_1000k/: model.config  model.sdf
rosbag/rosbag2_2022_04_28-16_25_01/: metadata.yaml  rosbag2_2022_04_28-16_25_01_0.db3
rosbag/rosbag2_2022_05_05-08_54_19/: metadata.yaml  rosbag2_2022_05_05-08_54_19_0.db3
src/missions_interfaces/: CMakeLists.txt  package.xml
src/missions_interfaces/msg/: Velocity.msg
src/px4_missions/: CMakeLists.txt  package.xml
src/px4_missions/launch/: multipleDroneOT_launch.py  multipleDroneSpeed_launch.py  multipleDrone_launch.py  multipleDrone_launch2.py  supervised_launch.py
src/px4_missions/params/: mavros_param.yaml  mission1.yaml  mission2.yaml  velMission1.yaml  velMission2.yaml  velMission3.yaml
src/px4_missions/src/: drone.cpp  drone.hpp  mission1.yaml  missionSupervisor.cpp  objectTrackingMission.cpp  simpleMission.cpp  supervisedMission.cpp
src/px4_missions/src/base/: droneBase.cpp  droneBase.hpp  droneBaseMavlink.cpp  droneBaseMavlink.hpp  droneBaseRTPS.cpp  droneBaseRTPS.hpp
src/px4_missions/src/objectTracking/: objectTrackingDrone.cpp  objectTrackingDrone.hpp
src/px4_missions/src/simple/: droneSimple.cpp  droneSimple.hpp
src/px4_missions/src/simpleRTPS/: droneSimple.cpp  droneSimple.hpp
src/px4_missions/src/supervised/: droneSupervised.cpp  droneSupervised.hpp
